--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -140,6 +140,12 @@
                 }
             </MudPaper>
         </MudItem>
+
+        <MudItem xs="12">
+            <MudPaper>
+                <SimLineChart />
+            </MudPaper>
+        </MudItem>
     </MudGrid>
 </MudContainer>
 
