--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -17,4 +17,6 @@
     <MudNavLink Href="/leagues" Match="NavLinkMatch.Prefix" Icon="@Icons.Custom.Uncategorized.ChessKing">Leagues</MudNavLink>
 
     <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
+
+    <MudNavLink Href="/stats" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.BarChart">Stats</MudNavLink>
 </MudNavMenu>
