--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject BreadcrumbProvider Bread
 @inject RaceService RaceService
 @inject ProtectedLocalStorage LocalStorage
 @inject SimAuthenticationStateProvider AuthenticationProvider
@@ -160,6 +161,11 @@
 
     protected override async Task OnInitializedAsync()
     {
+        Bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: ""),
+        });
+
         recentRaces = await RaceService.GetRecentlyFinishedCalendarRaces(_raceAmount);
     }
 
